--- a/config/boards/shields/zonkey/zonkey_R.conf
+++ b/config/boards/shields/zonkey/zonkey_R.conf
@@ -26,8 +26,8 @@ CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=20
 #CONFIG_PMW3610_FORCE_AWAKE=y
 CONFIG_PMW3610_POLLING_RATE_250=y
 CONFIG_PMW3610_AUTOMOUSE_TIMEOUT_MS=700
-CONFIG_PMW3610_SCROLL_ACCELERATION=y#加速度機能後付け
-CONFIG_PMW3610_SCROLL_ACCELERATION_SENSITIVITY=3#加速度機能後付け
+CONFIG_PMW3610_SCROLL_ACCELERATION=y
+CONFIG_PMW3610_SCROLL_ACCELERATION_SENSITIVITY=3
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 CONFIG_ZMK_SLEEP=y
