--- a/config/west.yml
+++ b/config/west.yml
@@ -4,17 +4,20 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: kureyakey
       url-base: https://github.com/kureyakey
-    - name: caksoylar  # <-- new entry
-      url-base: https://github.com/caksoylar  
+    - name: caksoylar
+      url-base: https://github.com/caksoylar
+    - name: kloir-z # 新しいリモート
+      url-base: https://github.com/kloir-z
+
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: zmk-pmw3610-driver
-      remote: kureyakey
-      revision: main
-    - name: zmk-rgbled-widget  # <-- new entry
+    - name: zmk-pmw3610-driver # ここを変更
+      remote: kloir-z
+      revision: scroll-acceleration-feature
+    - name: zmk-rgbled-widget
       remote: caksoylar
       revision: main
   self:
