--- a/config/boards/shields/zonkey/zonkey_R.conf
+++ b/config/boards/shields/zonkey/zonkey_R.conf
@@ -8,6 +8,16 @@ CONFIG_SPI=y
 CONFIG_INPUT=y
 
 CONFIG_PMW3610=y
+
+# 7.5ms
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
+# 15ms
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
+
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=0
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
+
+
 CONFIG_PMW3610_CPI=800
 CONFIG_PMW3610_CPI_DIVIDOR=1
 # CONFIG_PMW3610_ORIENTATION_180=y
@@ -60,5 +70,5 @@ CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
 
 # --- BLE PHY・出力 ---
-CONFIG_BT_CTLR_PHY_2M=n
+CONFIG_BT_CTLR_PHY_2M=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
