--- a/config/boards/shields/zonkey/zonkey_R.conf
+++ b/config/boards/shields/zonkey/zonkey_R.conf
@@ -20,7 +20,7 @@ CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
 
 CONFIG_PMW3610_CPI=800
 CONFIG_PMW3610_CPI_DIVIDOR=1
-# CONFIG_PMW3610_ORIENTATION_180=y
+CONFIG_PMW3610_ORIENTATION_180=y
 # CONFIG_PMW3610_SNIPE_CPI=800
 # CONFIG_PMW3610_SNIPE_CPI_DIVIDOR=4
 CONFIG_PMW3610_SCROLL_TICK=16
