--- a/config/boards/shields/zonkey/zonkey_R.conf
+++ b/config/boards/shields/zonkey/zonkey_R.conf
@@ -20,7 +20,7 @@ CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
 
 CONFIG_PMW3610_CPI=800
 CONFIG_PMW3610_CPI_DIVIDOR=1
-# CONFIG_PMW3610_ORIENTATION_180=y
+CONFIG_PMW3610_ORIENTATION_180=y
 # CONFIG_PMW3610_SNIPE_CPI=800
 # CONFIG_PMW3610_SNIPE_CPI_DIVIDOR=4
 CONFIG_PMW3610_SCROLL_TICK=16
@@ -44,8 +44,8 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_PMW3610_SMART_ALGORITHM=n
 
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=n
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
 
 CONFIG_RGBLED_WIDGET_INTERVAL_MS=250
 CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_HIGH=50
