--- a/build.yaml
+++ b/build.yaml
@@ -20,7 +20,7 @@
 include:
   - board: seeeduino_xiao_ble
     shield: zonkey_R rgbled_adapter
-  - board: seeeduino_xiao_ble
+  - board: xiao_ble
     shield: zonkey_L rgbled_adapter
   - board: seeeduino_xiao_ble
     shield: settings_reset
