Fix board configuration in build.yaml

--- a/build.yaml
+++ b/build.yaml
@@ -22,5 +22,5 @@ include:
     shield: zonkey_R rgbled_adapter
   - board: xiao_ble
     shield: zonkey_L rgbled_adapter
-  - board: seeeduino_xiao_ble
+  - board: xiao_ble
     shield: settings_reset
