--- a/build.yaml
+++ b/build.yaml
@@ -18,7 +18,7 @@
 #
 ---
 include:
-  - board: seeeduino_xiao_ble
+  - board: xiao_ble
     shield: zonkey_R rgbled_adapter
   - board: xiao_ble
     shield: zonkey_L rgbled_adapter
