--- a/config/boards/shields/zonkey/zonkey.zmk.yml
+++ b/config/boards/shields/zonkey/zonkey.zmk.yml
@@ -3,6 +3,6 @@ id: zonkey
 name: zonkey
 type: shield
 url: https://github.com/kureyakey/zmk-config-zonkey
-requires: [seeeduino_xiao_ble]
+requires: [xiao_ble]
 features:
   - keys
