--- a/config/west.yml
+++ b/config/west.yml
@@ -6,16 +6,18 @@ manifest:
       url-base: https://github.com/kureyakey
     - name: caksoylar
       url-base: https://github.com/caksoylar
+    - name: tkk00
+      url-base: https://github.com/tkk00
 
-projects:
-  - name: zmk
-    remote: zmkfirmware
-    revision: main
-    import: app/west.yml
+  projects:
+    - name: zmk
+      remote: zmkfirmware
+      revision: main
+      import: app/west.yml
 
-  - name: zmk-rgbled-widget
-    remote: caksoylar
-    revision: main
+    - name: zmk-rgbled-widget
+      remote: caksoylar
+      revision: main
 
   self:
     path: config
