--- a/config/boards/shields/zonkey/zonkey_L.conf
+++ b/config/boards/shields/zonkey/zonkey_L.conf
@@ -1,6 +1,9 @@
 CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11_RESOLUTION=2
+CONFIG_EC11_DEBOUNCE_MS=2
+
 CONFIG_RGBLED_WIDGET_INTERVAL_MS=250
 CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_HIGH=50
 CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
