--- a/config/west.yml
+++ b/config/west.yml
@@ -2,8 +2,6 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: oleksandrmaslov
-      url-base: https://github.com/oleksandrmaslov
     - name: caksoylar
       url-base: https://github.com/caksoylar
     - name: tkk00
@@ -11,7 +9,7 @@ manifest:
 
   projects:
     - name: zmk-pointing-acceleration
-      remote: oleksandrmaslov
+      remote: tkk00
       revision: main
 
     - name: zmk
