--- a/config/boards/shields/zonkey/zonkey_R.conf
+++ b/config/boards/shields/zonkey/zonkey_R.conf
@@ -8,10 +8,11 @@ CONFIG_INPUT=y
 
 CONFIG_NFCT_PINS_AS_GPIOS=y
 
-CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
-CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
-CONFIG_BT_PERIPHERAL_PREF_LATENCY=0
-CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
+# CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
+# CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
+# CONFIG_BT_PERIPHERAL_PREF_LATENCY=0
+# CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
+
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
