--- a/config/boards/shields/zonkey/zonkey_R.conf
+++ b/config/boards/shields/zonkey/zonkey_R.conf
@@ -13,8 +13,7 @@ CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
 CONFIG_BT_PERIPHERAL_PREF_LATENCY=0
 CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=300
 
-
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=n
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
@@ -28,16 +27,16 @@ CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
 
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHINGk=y
 CONFIG_BT_BAS=y
 
 CONFIG_RGBLED_WIDGET_SHOW_LAYER_COLORS=y
 
-CONFIG_ZMK_BLE_THREAD_STACK_SIZE=2048
-CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=2048
-CONFIG_INPUT_THREAD_STACK_SIZE=2048
-CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
+# CONFIG_ZMK_BLE_THREAD_STACK_SIZE=2048
+# CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=2048
+# CONFIG_INPUT_THREAD_STACK_SIZE=2048
+# CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
 
-CONFIG_BT_CTLR_PHY_2M=y
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# CONFIG_BT_CTLR_PHY_2M=y
+# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
