--- a/config/boards/shields/zonkey/zonkey_R.conf
+++ b/config/boards/shields/zonkey/zonkey_R.conf
@@ -8,15 +8,17 @@ CONFIG_INPUT=y
 
 CONFIG_NFCT_PINS_AS_GPIOS=n
 
-CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
 CONFIG_BT_PERIPHERAL_PREF_LATENCY=0
 CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=500
 
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=n
 
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+
 
 CONFIG_EC11=n
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
@@ -32,11 +34,11 @@ CONFIG_BT_BAS=y
 
 CONFIG_RGBLED_WIDGET_SHOW_LAYER_COLORS=y
 
-CONFIG_ZMK_BLE_THREAD_STACK_SIZE=2048
-CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=2048
-CONFIG_INPUT_THREAD_STACK_SIZE=2048
-CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
+# CONFIG_ZMK_BLE_THREAD_STACK_SIZE=2048
+# CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=2048
+# CONFIG_INPUT_THREAD_STACK_SIZE=2048
+# CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
 
-# CONFIG_BT_CTLR_PHY_2M=y
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_PHY_2M=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
