--- a/config/boards/shields/zonkey/zonkey_L.conf
+++ b/config/boards/shields/zonkey/zonkey_L.conf
@@ -2,6 +2,13 @@ CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
+
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+
 CONFIG_RGBLED_WIDGET_INTERVAL_MS=250
 CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_HIGH=50
 CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
