--- a/config/boards/shields/zonkey/zonkey_R.conf
+++ b/config/boards/shields/zonkey/zonkey_R.conf
@@ -13,7 +13,7 @@ CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
 CONFIG_BT_PERIPHERAL_PREF_LATENCY=0
 CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=500
 
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=n
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_TIMEOUT=30000
@@ -40,5 +40,5 @@ CONFIG_RGBLED_WIDGET_SHOW_LAYER_COLORS=y
 # CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
 
-CONFIG_BT_CTLR_PHY_2M=y
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
+CONFIG_BT_CTLR_PHY_2M=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
