--- a/config/boards/shields/zonkey/zonkey_L.conf
+++ b/config/boards/shields/zonkey/zonkey_L.conf
@@ -2,7 +2,7 @@ CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
 
 CONFIG_ZMK_SLEEP=y
@@ -17,3 +17,12 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_BT_BAS=y
+
+CONFIG_ZMK_BLE_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=2048
+CONFIG_INPUT_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
+
+CONFIG_BT_CTLR_PHY_2M=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
